--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,6 +10,7 @@
 
     <!-- Practice Planner Strings -->
     <string name="title_activity_practice_planner">Practice Planner</string>
+    <string name="practice_title_hint">Name Your Practice</string>
     <string name="practice_hint">Edit your practice here.</string>
     <string name="practice_title">Practice Planner</string>
     <string name="new_practice">New</string>
@@ -23,9 +24,10 @@
     <string name="drill">Drill:</string>
     <string name="drill_hint">Enter your drill here!</string>
     <string name="add_drill">+ Add Drill</string>
-    <string name="title_activity_clipboard">ClipboardActivity</string>
+    
 
     <!-- Clipboard Strings -->
+    <string name="title_activity_clipboard">ClipboardActivity</string>
     <string name="content_desc">An image of a basketball court.</string>
     <string name="new_clipboard">New</string>
     <string name="blue">Blue</string>
@@ -38,10 +40,15 @@
     <!-- Stat Sheet Strings -->
     <string name="player_header">Player</string>
     <string name="points_header">Points</string>
-    <string name="assists_header">Assists</string>
-    <string name="rebs_header">Rebounds</string>
+    <string name="assists_header">Asst.</string>
+    <string name="rebs_header">Rebs.</string>
     <string name="steals_header">Steals</string>
     <string name="player_hint">Player Name</string>
+    <string name="team_name">Team Name:</string>
+    <string name="game_date">Date:</string>
+    <string name="date_hint">dd/mm/yyyy</string>
+    <string name="new_statSheet">New</string>
+    <string name="save_statSheet">Save</string>
     
 
 </resources>
