--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -45,7 +45,7 @@
     <string name="game_name_hint">A specific name for this game</string>
     <string name="game_date">Date:</string>
     <string name="date_hint">dd/mm/yyyy</string>
-    <string name="new_statSheet">New</string>
+    <string name="open_statSheet">Open Stat Sheet</string>
     <string name="save_statSheet">Save</string>
     
     <!-- Practice Hub Strings -->
