Fixed a bug where if it was the first time the app was run on a device it would crash when navigating to the practice or stat sheet pages.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -58,4 +58,5 @@
     
     <!-- Stat Sheet Hub Strings -->
     <string name="open_stat_sheet_header">Stat Sheets</string>
+    <string name="new_stat_sheet">New</string>
 </resources>
